# sl-teaching-website

./: .gitignore  README.md  README2.md  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
backend/python/: README.md  pyproject.toml  requirements.txt
backend/python/models/: asl_model_20250310_184213.pt
backend/python/scripts/: dev.py  dev.sh  docker_manager.py
backend/python/scripts/blockchain/: README.md  deploy_contracts.py  grant_minter_role.py  simple_deploy.py
backend/python/src/: main.py
backend/python/src/api/routes/: base.py  blockchain_routes.py  evaluation.py  prediction.py  rewards.py  rewards_v2.py  storage.py
backend/python/src/contracts/abis/: contracts
backend/python/src/core/: config.py
backend/python/src/core/contracts/: registry.py
backend/python/src/routes/: evaluation.py  storage.py  test_reward.py
backend/python/src/schemas/: blockchain.py
backend/python/src/scripts/: check_contract_deployment.py  role_check.py
backend/python/src/services/: evaluator.py  lilypad.py  reward_service.py
backend/python/src/services/blockchain/: README.md  base_contract.py  core.py  erc20_service.py  nonce_manager.py  rate_limiter.py  transactions.py
backend/python/src/services/evaluation/: evaluator.py
backend/python/src/services/ml/: asl_service.py
backend/python/src/services/reward/: achievement_reward.py  achievement_reward_v2.py  xp_reward.py  xp_reward_v2.py
backend/python/src/tests/: test_reward_services_v2.py
backend/python/src/utils/: logging_config.py
backend/python/tests/: conftest.py  test_akave_sdk.py
(+131 files in other folders)
